extras/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: smesh-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: smesh-dashboard.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smesh-dashboard
                port:
                  number: 5000
