extras/smesh-dashboard-istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smesh-dashboard-gw
  namespace: smesh-dashboard
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "smesh-dashboard.example.com"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-triggers
  namespace: smesh-dashboard
spec:
  hosts:
  - "smesh-dashboard.example.com"
  gateways:
  - smesh-dashboard-gw
  http:
  - route:
    - destination:
        host: smesh-dashboard
        port:
          number: 5000
